:building_construction: brute-force && benchmark && npm tasks

--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "scripts": {
     "test": "ava",
-    "start": "./node_modules/.bin/babel src --out-dir dist && node dist"
+    "copy:data": "cp -R data-source dist",
+    "build:src": "./node_modules/.bin/babel src --out-dir dist/src && npm run copy:data",
+    "start": "npm run build:src && node dist/src",
+    "build:bench": "./node_modules/.bin/babel bench --out-dir dist/bench",
+    "bench": "npm run build:src && npm run build:bench && node dist/bench/run.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
-    "ava": "1.0.0-beta.8"
+    "ava": "1.0.0-beta.8",
+    "cli-table2": "^0.2.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0"
